# x3-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config
src/: bitpack.rs  bitpacker.rs  bitreader.rs  bytereader.rs  bytewriter.rs  crc.rs  decodefile.rs  decoder.rs  encodefile.rs  encoder.rs  error.rs  lib.rs  streamencoder.rs  utils.rs  x3.rs
test/: Timing Results.ods  bench.sh  compile-pgo.sh  convert_wavs.sh  test_wavs.sh  timings.csv
