[package]
name = "x3"
description = "A CPU efficient audio encoder/decoder using the X3 codec."
version = "0.2.1"
authors = ["Simon M. Werner <simonwerner@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"
repository = "https://github.com/psiphi75/x3-rust"
keywords = ["audio", "compression"]
categories = ["compression", "embedded", "encoding", "multimedia::audio"]


[features]
default = ["classic"]

# The classic compression header sizes.  Has no dependencies.
classic = []

# Custom compression header sizes - ones used by OceanInstruments.
oceaninstruments = []


[build-dependencies]
clippy = { version = "^0.0.302", optional = true }

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
hound = "3.4.0"
quick-xml = "0.13.3"
clap = "2.32.0"
