[package]
name = "x3"
description = "A CPU efficient audio encoder/decoder using the X3 codec."
version = "0.3.0"
authors = ["Simon M. Werner <simonwerner@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"
repository = "https://github.com/psiphi75/x3-rust"
keywords = ["audio", "compression"]
categories = ["compression", "embedded", "encoding", "multimedia::audio"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[build-dependencies]
clippy = { version = "^0.0.302", optional = true }

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
hound = "3.4.0"
quick-xml = "0.18.1"
clap = "2.33.1"
chrono = "0.4.15"